--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                             class="framer-text"><span
                                                 style="--font-selector:R0Y7S291bGVuLXJlZ3VsYXI=;--framer-font-family:&quot;Koulen&quot;, sans-serif"
                                                 class="framer-text">CA:
-                                            </span>TBA</p>
+                                            </span>0xd25E1a480d6C70f69Ee6Ef925fbb6b29a75eCC87</p>
                                     </div>
                                 </div>
                                 <div class="framer-oyttml" tabindex="0">
@@ -1239,7 +1239,7 @@
                                             class="framer-text"><span
                                                 style="--font-selector:R0Y7S291bGVuLXJlZ3VsYXI=;--framer-font-family:&quot;Koulen&quot;, sans-serif"
                                                 class="framer-text">CA:
-                                            </span>TBA</p>
+                                            </span>0xd25E1a480d6C70f69Ee6Ef925fbb6b29a75eCC87</p>
                                     </div>
                                 </div>
                                 <div class="framer-idq9s4" tabindex="0">
